aligned labels/field on editProfile/registration page ( fixes #1187 )

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1004,20 +1004,17 @@ span {
     background-color: #363639;
     border: 1px solid #7995ae;
     color: #aca49c;
-    margin-bottom: 1px;
-    padding: 0px;
     width: 150px;
     font-size: 10px;
     margin-top: 2px;
+    margin-bottom: 1px;
 }
 
 #public_reg_form input {
     background-color: #363639;
     border: 1px solid #7995ae;
     color: #aca49c;
-    margin-top: 1px;
-    margin-bottom: 1px;
-    padding: 0px;
+    padding: 0;
     width: 150px;
     height: 15px;
     margin-top: 2px;
@@ -1053,11 +1050,11 @@ span {
     margin: 0px;
     padding: 0px;
     padding-left: 7px;
-    width: 115px;
+    width: 117px;
     color: #92897e;
     margin-top: 2px;
     background-color: #363639;
-    height: 21px;
+    height: 18px;
     line-height: 19px;
     color: #d3d3d3;
 }
@@ -1066,10 +1063,10 @@ span {
     background-color: #363639;
     border: 1px solid #7995ae;
     color: #aca49c;
-    margin: 2px;
+    margin: 1px 2px 1px 2px;
     padding: 0px;
-    width: 151px;
-    height: 19px;
+    width: 152px;
+    height: 18px;
     font-family: Arial;
     font-size: 10px;   
 }
@@ -1078,10 +1075,10 @@ span {
     background-color: #363639;
     border: 1px solid #7995ae;
     color: #aca49c;
-    margin: 2px;
+    margin: 1px 2px 1px 2px;
     padding: 0px;
     width: 150px;
-    height: 15px;
+    height: 16px;
     font-family: Arial;
     font-size: 11px;    
 }
@@ -1902,12 +1899,12 @@ div.best_video div.right img {
 
 #registration_box_complete_page label {
     background-color: #363639;
-    height: 18px;
+    height: 16px;
     display: block;
     float: left;
     width: 160px;
     line-height: 18px;
-    padding-left: 2px;
+    padding: 1px 4px;
     margin-top: 2px;
 }
 
@@ -1943,8 +1940,7 @@ div.best_video div.right img {
     text-decoration: underline;
 }
 
-#registration_box_complete_page input,#registration_box_complete_page select
-    {
+#registration_box_complete_page input, #registration_box_complete_page select {
     width: 146px;
     font-size: 10px;
     border: 1px solid #7995ae;
@@ -1952,14 +1948,18 @@ div.best_video div.right img {
     color: #aca49c;
     float: left;
     display: block;
-    margin: 2px;
-    margin-left: 2px;
+    margin: 3px 2px;
+}
+
+#registration_box_complete_page input {
+  height: 12px;
 }
 
 #registration_box_complete_page select {
-	width: 150px;
-    height: 18px;
-    margin-bottom: 1px;
+  width: 150px;
+  height: 18px;
+  margin-bottom: 1px;
+  margin-top: 2px;
 }
 
 #secondary_container .please_read {
